--- a/linux/command/02ls.md
+++ b/linux/command/02ls.md
@@ -164,6 +164,17 @@ Change: 2022-10-07 05:41:27.552021008 +0000
 
 ![](../../images/linux/command/23.png)
 
-- ls-R 递归列出子目录当中的文件。
+- ls -R 递归列出子目录当中的文件。
 
-- 
+- ls -S 根据文件大小排序
+- ls - t 根据最后一次修改时间排序。
+- ls -r 逆序排列。
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
