--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -328,5 +328,5 @@ main: demo.c
 
 关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
 
-![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+![微信公众号](qrcode2.jpg)
 
