udpate ps command

--- a/linux/command/05ps.md
+++ b/linux/command/05ps.md
@@ -35,7 +35,7 @@ ps -e
 
 ![40](../../images/linux/command/41.png)
 
-### 输出只跟终端有关的进程
+### 输出所有进程但是排除终端和session leader
 
 ```shell
 ps -a
@@ -51,3 +51,54 @@ ps -a
 一个更具体的描述一个 shell 中 session leader 和其他进程的关系如下图所示（图中最左方就是 session leader 进程）：
 
 ![40](../../images/linux/command/43.png)
+
+### 查看所有正在运行的程序
+
+```shell
+ps -r
+```
+
+### 查看所有当前用户的进程
+
+```shell
+ps -u
+```
+
+### 查看具体某个进程的信息
+
+```shell
+ps -p pid
+```
+
+![40](../../images/linux/command/44.png)
+
+### 输出内容携带用户名
+
+```
+ps -u
+```
+
+### 查看所有与终端有关的进程
+
+```shell
+ps -T
+```
+
+### 一个我们非常熟悉的命令
+
+我们在linux操作系统下面我们通常使用 ps 命令的时候，我们会使用如下两个命令：
+
+```shell
+ps aux
+ps -ef
+```
+
+其实在很多情况下我们只想查看与我们自己有关的程序，而上面的两个命令还查看了很多其他用户的进程，因此我们可以修改一下上面两个命令：
+
+```shell
+ps xu
+```
+
+上面这个命令只会输出与我们自己有关的程序同时输出的内容还算完整。
+
+![40](../../images/linux/command/45.png)
