udpate ps command

--- a/linux/command/05ps.md
+++ b/linux/command/05ps.md
@@ -52,16 +52,16 @@ ps -a
 
 ![40](../../images/linux/command/43.png)
 
-### 查看所有正在运行的程序
+### 查看正在运行的程序
 
 ```shell
 ps -r
 ```
 
-### 查看所有当前用户的进程
+### 查看当前用户的进程
 
 ```shell
-ps -u
+ps -x
 ```
 
 ### 查看具体某个进程的信息
@@ -78,7 +78,9 @@ ps -p pid
 ps -u
 ```
 
-### 查看所有与终端有关的进程
+### 查看所有与当前终端有关的进程
+
+这个命令和直接输入ps执行的效果一样
 
 ```shell
 ps -T
@@ -102,3 +104,40 @@ ps xu
 上面这个命令只会输出与我们自己有关的程序同时输出的内容还算完整。
 
 ![40](../../images/linux/command/45.png)
+
+### 指定ps命令输出的内容
+
+在前面的命令当中我们都没有定制化的输出过一些内容，都是ps命令想输出啥就输出啥！其实我们可以指定ps命令只输出我们需要的内容，比如下面的命令输出进程id，父进程id，以及程序执行时候输入的命令：
+
+```shell
+ps -o pid,ppid,command
+```
+
+```shell
+➜  pthreads ps -o pid,ppid,command
+    PID    PPID COMMAND
+2782266   34624 /usr/bin/zsh
+2825942 2782266 ps -o pid,ppid,command
+```
+
+-o表示指定我们想要输出的内容，在上面的命令当中：
+
+- pid: 表示当前进程的进程号。
+- ppid: 表示当前进程父进程的进程号。
+- command: 表示执行这个命令的时候输入的命令。
+
+还有很多其他的可以输出的内容，在下表当中列出一些经常使用的条目：
+
+| user    | 用户名                             |
+| ------- | ---------------------------------- |
+| pid     | 进程号                             |
+| ppid    | 父进程进程号                       |
+| command | 执行命令                           |
+| %cpu    | 进程对于cpu的使用率                |
+| %mem    | 内存占有率                         |
+| comm    | 更加简洁的命令和command一致        |
+| cputime | 进程累计使用的CPU时间              |
+| etime   | 进程开始执行到现在一共过了多长时间 |
+| stat    | 进程的状态                         |
+| ni      | 进程的优先级                       |
+|         |                                    |
