udpate ps command

--- a/linux/command/05ps.md
+++ b/linux/command/05ps.md
@@ -128,7 +128,7 @@ ps -o pid,ppid,command
 
 还有很多其他的可以输出的内容，在下表当中列出一些经常使用的条目：
 
-| user    | 用户名                             |
+| 条目    | 含义                               |
 | ------- | ---------------------------------- |
 | pid     | 进程号                             |
 | ppid    | 父进程进程号                       |
@@ -140,4 +140,85 @@ ps -o pid,ppid,command
 | etime   | 进程开始执行到现在一共过了多长时间 |
 | stat    | 进程的状态                         |
 | ni      | 进程的优先级                       |
+| user    | 用户名                             |
 |         |                                    |
+
+这里我们在重点谈一下进程的状态 stat，我们看一个他的输出：
+
+```shell
+➜  pthreads ps -o pid,ppid,stat,command
+    PID    PPID STAT COMMAND
+2782266   34624 Ss   /usr/bin/zsh
+2832729 2782266 SN   ./sleep.out
+2832740 2782266 R+   ps -o pid,ppid,stat,command
+```
+
+在上面当中 `STAT` 那一列就是表示进程的状态，我们现在仔细分析一下上面字母表示的含义：
+
+`STAT` 当中字母的含义表：
+
+| 条目 | 含义                                                         |
+| ---- | ------------------------------------------------------------ |
+| D    | 表示不能够被中断的睡眠操作，比如说IO操作                     |
+| I    | 内核当中的空闲线程                                           |
+| R    | 正在执行或者处于就绪队列当中的进程                           |
+| S    | 可以被中断的睡眠，一般是等待某个事件触发                     |
+| T    | 被其他的进程发送的信号给停下来了                             |
+| t    | 被调试或者tracing中                                          |
+| Z    | 表示这个进程是一个僵尸进程                                   |
+| <    | 表示高优先级                                                 |
+| N    | 表示低优先级                                                 |
+| L    | 有页面被所在内存当中，也就是说这个页面不会被操作系统换出道对换区当中 |
+| s    | 表示这个进程是一个 session leader                            |
+| l    | 是一个多线程程序                                             |
+| +    | 表示在前台进程组当中                                         |
+|      |                                                              |
+
+现在根据上面表格当中的内容我们可以知道：
+
+- 进程 2782266 正在等待某个事件触发，而且这个进程是 session leader。
+- 进程 2832729 也是在等待某个事件触发，而且是低优先级的进程。
+- 进程 2832740 正在执行。
+
+我们在来看一个多进程程序的例子：
+
+```C
+
+
+#include <stdio.h>
+#include <unistd.h>
+#include <pthread.h>
+
+void* func(void* args) {
+  while (1)
+  {
+    /* code */
+  }
+  
+}
+int main() {
+  for(int i = 0; i < 10; i++) {
+    pthread_t tid;
+    pthread_create(&tid, NULL, func, NULL);
+  }
+  while (1)
+  {
+    sleep(1);
+  }
+  
+  return 0;
+}
+```
+
+上面的程序执行完成之后，ps 的输出结果如下：
+
+```shell
+➜  pthreads ps -o pid,ppid,stat,command
+    PID    PPID STAT COMMAND
+2782266   34624 Ss   /usr/bin/zsh
+2840012 2782266 SNl  ./sleep.out # 这个进程就是上面那个程序表示的进程
+2840037 2782266 R+   ps -o pid,ppid,stat,command
+```
+
+我们可以看到这个进程的 `STAT` 当中还有一个 `l` 表示这是一个多进程的程序。
+
