udpate ps command

--- a/linux/command/05ps.md
+++ b/linux/command/05ps.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在linux系统当中我们通长会使用命令去查看一些系统的进程信息，我们最常使用的就是 ps (process status)。ps 命令主要是用于查看当前正在运行的程序，以及他们相关的的信息，我们可以通过不同的选项进行查看。ps 给我们提供了非常多的选项，这些选项常常令人分辨不清楚，本篇文章我们仔细谈一谈 ps 输出具体的含义。
+在linux系统当中我们通常会使用命令去查看一些系统的进程信息，我们最常使用的就是 ps (process status)。ps 命令主要是用于查看当前正在运行的程序，以及他们相关的的信息，我们可以通过不同的选项进行查看。ps 给我们提供了非常多的选项，这些选项常常令人分辨不清楚，本篇文章我们仔细谈一谈 ps 输出具体的含义。
 
 ## ps命令详解
 
@@ -91,7 +91,7 @@ ps -T
 我们在linux操作系统下面我们通常使用 ps 命令的时候，我们会使用如下两个命令：
 
 ```shell
-ps aux
+ps aux # ax 通常要在一起使用 一起使用时候的效果和 -e 或者 -A 是一样的
 ps -ef
 ```
 
@@ -180,6 +180,10 @@ ps -o pid,ppid,command
 - 进程 2832729 也是在等待某个事件触发，而且是低优先级的进程。
 - 进程 2832740 正在执行。
 
+下图表示 linux 当中进程的几种状态：
+
+![](../../images/linux/command/03.png)
+
 我们在来看一个多进程程序的例子：
 
 ```C
@@ -221,4 +225,16 @@ int main() {
 ```
 
 我们可以看到这个进程的 `STAT` 当中还有一个 `l` 表示这是一个多进程的程序。
+
+## 总结
+
+在本篇文章当中主要给大家介绍了一些常见的 ps 命令的使用方法，以及一些常用的输出，还有就是输出内容中比较重要的进程状态，能够很好的帮助我们实时去了解进程。
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](../../qrcode2.jpg)
 
