fix:some format error

--- a/da/05深入剖析斐波拉契数列.md
+++ b/da/05深入剖析斐波拉契数列.md
@@ -249,13 +249,13 @@ public static int fibonacci(int n) {
 ```java
 public static int[][] fibMatrixPower(int n) {
     // 这个矩阵是根据上图我们的公式得到的
-    int[][] baseMatrix = {{1, 1}, {1, 0}};
+    int[][] baseMatrix = \{\}1, 1}, {1, 0}};
     if (n == 1)
         return baseMatrix;
     // 初始化为单位矩阵 如果是整数幂 初始化为 1
     // 这里初始化为单位矩阵的目的是因为单位矩阵和任何矩阵
     // 相乘结果都为原矩阵
-    int[][] ans = {{1, 0}, {0, 1}};
+    int[][] ans = \{\}1, 0}, {0, 1}};
 
     for (int i = 0; i < n; i++) {
         // 这个右移的目的是查看 n 对应的位置上是否为 1 如果为 1 就需要进行矩阵乘法运算
@@ -358,11 +358,11 @@ public class Fibonacci {
   }
 
   public static int[][] fibMatrixPower(int n) {
-    int[][] baseMatrix = {{1, 1}, {1, 0}};
+    int[][] baseMatrix = \{\}1, 1}, {1, 0}};
     if (n == 1)
       return baseMatrix;
     // 初始化为单位矩阵 如果是整数幂 初始化为 1
-    int[][] ans = {{1, 0}, {0, 1}};
+    int[][] ans = \{\}1, 0}, {0, 1}};
 
     for (int i = 0; i < n; i++) {
       // 这个右移的目的是查看 n 对应的位置上是否为 1 如果为 1 就需要进行矩阵乘法运算
